lk | fix alignment of post titles

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ a {
 
 h2 {
   font-family: "Permanent Marker";
-  padding-left: 2em;
+  padding-left: 1em;
   padding-top: 5%;
   font-size: 3em;
   font-weight: bold;
